# doorman

./: .gitignore  README.md  pyproject.toml
cli/: __init__.py  cli.py
config/: default_config.toml
docs/: PRD.md  architecture.md  decisions.md
doorman/: __init__.py  config.py  detector.py  locker.py  logger.py  main.py  notifier.py  recognizer.py  session_guard.py  state_machine.py  stats.py
launchd/: com.doorman.agent.plist
menubar/: __init__.py  menubar.py
scripts/: install.sh  uninstall.sh
tests/: conftest.py  test_detector.py  test_recognizer.py  test_session_guard.py  test_state_machine.py
